# 2048

./: .gitignore  2048.desktop.in  2048.rc  CMakeLists.txt  README.md
Docs/: CMakeLists.txt  Doxyfile.in
cmake/: CompilerWarnings.cmake  option.cmake
docs/: CMakeLists.txt
src/: BoardMoves.h  GameStatus.h  Interactions.h  Interface.h  main.c
src/2048_Engine/: CMakeLists.txt
src/2048_Engine/Board/: Board.c  Board.h
src/Board/: Board.c  Board.h  CMakeLists.txt
src/Game/: CMakeLists.txt  Game.c  Game.h
src/GameEngine/: CMakeLists.txt  GameEngine.c  GameEngine.h  GameHistory.c  GameHistory.h
src/Interface_SDL2/: CMakeLists.txt  Interface_SDL2.c
